--- a/openssl.cnf
+++ b/openssl.cnf
@@ -50,3 +50,4 @@ DNS.20 = aadcdn.msauth.net
 DNS.21 = mysignins.microsoft.com
 DNS.22 = account.activedirectory.windowsazure.com
 DNS.23 = static2.sharepointonline.com
+DNS.24 = saaspoc1-my.sharepoint.com
