removed not needed domains

--- a/gwproxy.env
+++ b/gwproxy.env
@@ -1,5 +1,5 @@
 # Allowed domains, comma separated
-ALLOWED_DOMAINS=saaspoc1.sharepoint.com,glasswallk8.sharepoint.com,login.microsoftonline.com,aadcdn.msauth.net,login.windows.net,aadcdn.msftauth.net,mysignins.microsoft.com,account.activedirectory.windowsazure.com,shell.cdn.office.net,spoprod-a.akamaihd.net,browser.pipe.aria.microsoft.com,amcdn.msftauth.net,login.microsoftonline.com,r4.res.office365.com,substrate.office.com,lpcres.delve.office.com,webshell.suite.office.com,loki.delve.office.com,aadcdn.msftauth.net,aadcdn.msauth.net,mysignins.microsoft.com,account.activedirectory.windowsazure.com,static2.sharepointonline.com,xhaus.com,glasswallk8-my.sharepoint.com,ukc-word-edit.officeapps.live.com,saaspoc1-my.sharepoint.com
+ALLOWED_DOMAINS=saaspoc1.sharepoint.com saaspoc1-my.sharepoint.com ukc-word-edit.officeapps.live.com ukc-excel.officeapps.live.com  ukc-powerpoint.officeapps.live.com 
 # ICAP server url
 ICAP_URL=icap://127.0.0.1:1344/gw_rebuild
 # Root domain , the domain appended to the original website domain
