--- a/openssl.cnf
+++ b/openssl.cnf
@@ -28,26 +28,7 @@ subjectAltName = @alt_names
 
 [alt_names]
 DNS.1  = saaspoc1.sharepoint.com
-DNS.2  = login.microsoftonline.com
-DNS.3  = aadcdn.msauth.net
-DNS.4  = login.windows.net
-DNS.5  = aadcdn.msftauth.net
-DNS.6  = mysignins.microsoft.com
-DNS.7  = account.activedirectory.windowsazure.com
-DNS.8  = shell.cdn.office.net
-DNS.9  = ukc-word-edit.officeapps.live.com
-DNS.10 = spoprod-a.akamaihd.net
-DNS.11 = browser.pipe.aria.microsoft.com
-DNS.12 = amcdn.msftauth.net
-DNS.13 = login.microsoftonline.com
-DNS.14 = r4.res.office365.com
-DNS.15 = substrate.office.com
-DNS.16 = lpcres.delve.office.com
-DNS.17 = webshell.suite.office.com
-DNS.18 = loki.delve.office.com
-DNS.19 = aadcdn.msftauth.net
-DNS.20 = aadcdn.msauth.net
-DNS.21 = mysignins.microsoft.com
-DNS.22 = account.activedirectory.windowsazure.com
-DNS.23 = static2.sharepointonline.com
-DNS.24 = saaspoc1-my.sharepoint.com
+DNS.2  = saaspoc1-my.sharepoint.com
+DNS.3  = ukc-word-edit.officeapps.live.com
+DNS.4  = ukc-excel.officeapps.live.com
+DNS.5  = ukc-powerpoint.officeapps.live.com
