--- a/gwproxy.env
+++ b/gwproxy.env
@@ -1,7 +1,7 @@
 # Allowed domains, comma separated
-ALLOWED_DOMAINS=saaspoc1.sharepoint.com,saaspoc1-my.sharepoint.com ukc-word-edit.officeapps.live.com ukc-excel.officeapps.live.com  ukc-powerpoint.officeapps.live.com 
+ALLOWED_DOMAINS=saaspoc1.sharepoint.com,saaspoc1-my.sharepoint.com,ukc-word-edit.officeapps.live.com,ukc-excel.officeapps.live.com,ukc-powerpoint.officeapps.live.com 
 # ICAP server url
-ICAP_URL=icap://127.0.0.1:1344/gw_rebuild
+ICAP_URL=icap://3.139.22.215:1344/gw_rebuild
 # Root domain , the domain appended to the original website domain
 ROOT_DOMAIN=glasswall-icap.com
 SQUID_IP=127.0.0.1
